# massive-activations-fig3

./: .gitignore  .mcp.json  CLAUDE.md  Figure3_Colab.ipynb  README.md  SPEC.md  SPEC_highnorm.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: delegate.md  implement.md  orchestrate.md  review.md  spec.md
.claude/hooks/: checkpoint.sh  post-edit.sh
.claude/templates/: SPEC.template.md
configs/: channel_stability.yaml  default.yaml  highnorm_tokens.yaml
data/: genai_prompts.jsonl
examples/: todo_api.yaml
scripts/: run_pipeline.sh  worker.sh
src/: stage1_generate_and_cache.py  stage2_channel_ranking.py  stage3_mask_construction.py  stage4_evaluate_figure3d.py
src/common/: __init__.py  clustering.py  config.py  highnorm.py  io.py  model_utils.py  spatial.py
src/experiments/: __init__.py  channel_stability.py  highnorm_qualitative.py  highnorm_tokens.py
src/harness/: __init__.py  cli.py  config.py  mcp_server.py  snapshot.py  store.py
src/harness/checkpoints/: manager.py
src/harness/core/: executor.py  integrator.py  pipeline.py  planner.py  reviewer.py
src/harness/gates/: base.py  contract.py  custom.py  scope.py  smoke.py  syntax.py
src/harness/models/: events.py  spec.py
src/harness/providers/: anthropic.py  base.py  claude_cli.py
tests/: test_channel_stability.py  test_fig3_clustering.py  test_fig3_config.py  test_fig3_io.py  test_fig3_ranking.py  test_gates.py  test_highnorm.py  test_highnorm_qualitative.py  test_highnorm_runner.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_snapshot.py  test_store.py
