[project]
name = "agent-harness"
version = "0.1.0"
description = "A reusable agentic pipeline (plan, gated execute, integrate, review) plus a queryable knowledge substrate (blackboard) with MCP access for coordinating subagents."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.2.0",
]

[project.scripts]
harness = "harness.cli:main"
harness-mcp = "harness.mcp_server:main"
harness-snapshot = "harness.snapshot:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
