[project]
name = "agent-harness"
version = "0.1.0"
description = "A reusable agentic pipeline (plan, gated execute, integrate, review) plus a queryable knowledge substrate (blackboard) with MCP access for coordinating subagents."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Heavy, GPU/Colab-only deps for the Figure 3 reproduction pipeline. These are
# imported lazily inside the model-touching stages (stage1 / stage4 / model_utils),
# so the numeric core and the test suite do NOT require them. Install on Colab with:
#   uv sync --extra fig3     (or)     pip install -e ".[fig3]"
fig3 = [
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "torch>=2.4",
    "diffusers>=0.32",
    "transformers>=4.44",
    "accelerate>=0.34",
    "safetensors>=0.4",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.scripts]
harness = "harness.cli:main"
harness-mcp = "harness.mcp_server:main"
harness-snapshot = "harness.snapshot:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    # Lightweight numeric deps so the fig3 pure-function tests run in this env
    # (the model-touching stages need the full `fig3` extra, exercised on Colab).
    "numpy>=1.26",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# "src" keeps `import harness` working; "." lets the fig3 stages import as
# `src.common.*` (matching the `python -m src.stage1_...` runtime entrypoint).
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
